tests/snapshots/snapshot_tests__array_standard_copy4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_standard_copy4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) i+0) x+0)",
        "(= (Read_Int_Int (Write_Int_Int a+7 N x+0) N) x+0)",
        "(= (Read_Int_Int (Write_Int_Int a+7 Z x+0) Z) x+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 i+0)) i+0) (Read_Int_Int a+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int c+0 0 20) 0) 20)",
        "(= (Read_Int_Int (Write_Int_Int c+0 0 x+0) 0) x+0)",
        "(= (Read_Int_Int (Write_Int_Int c+0 Z 11) Z) 11)",
        "(= (Read_Int_Int (Write_Int_Int d+0 0 22) 0) 22)",
        "(= (Read_Int_Int (Write_Int_Int d+0 Z 14) Z) 14)",
        "(= (Read_Int_Int (Write_Int_Int d+0 i+0 (Read_Int_Int c+0 i+0)) i+0) (Read_Int_Int c+0 i+0))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int d+0 i+0 (Read_Int_Int c+0 i+0)) 0) (Read_Int_Int d+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int d+0 i+0 (Read_Int_Int c+0 i+0)) N) (Read_Int_Int d+0 N)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int d+0 N 8) Z) (Read_Int_Int d+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (Read_Int_Int b+0 i+0)) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (Read_Int_Int b+0 i+0)) i+1) (Read_Int_Int c+0 i+1)))",
        "(=> (not (= i+6 0)) (= (Read_Int_Int (Write_Int_Int b+0 0 x+0) i+6) (Read_Int_Int b+0 i+6)))",
        "(=> (not (= i+6 0)) (= (Read_Int_Int (Write_Int_Int c+0 0 20) i+6) (Read_Int_Int c+0 i+6)))",
    ],
}
