tests/snapshots/snapshot_tests__array_standard_partition.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_standard_partition.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 k+0 (Read_Int_Int a+0 i+0)) k+0) (Read_Int_Int a+0 i+0))",
        "(=> (not (= Z k+0)) (= (Read_Int_Int (Write_Int_Int b+0 k+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int b+0 Z)))",
    ],
}
