tests/snapshots/snapshot_tests__array_tiling_poly4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_poly4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* (+ i+0 1) (- i+0 1)) 2)) i+0) (+ (* (+ i+0 1) (- i+0 1)) 2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) 1)) i+0) (- (Read_Int_Int a+0 i+0) 1))",
        "(=> (not (= 1 Z)) (= (Read_Int_Int (Write_Int_Int a+0 Z 1) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 Z)) (= (Read_Int_Int (Write_Int_Int a+2 Z (- i+0 1)) 1) (Read_Int_Int a+2 1)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* (+ i+0 1) (- i+0 1)) 2)) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) 1)) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= S i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* (+ i+0 1) (- i+0 1)) 2)) S) (Read_Int_Int a+0 S)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* (+ i+0 1) (- i+0 1)) 2)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) 1)) Z) (Read_Int_Int a+0 Z)))",
    ],
}
