tests/snapshots/snapshot_tests__array_tiling_pr3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_pr3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) 0) (- (* 3 i+0) 3)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (- (* 3 i+0) 3)) val3+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) 0) (- (* 3 i+0) 2)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) (- (* 3 i+0) 2)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) 0) (- (* 3 i+0) 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (- (* 3 i+0) 1)) val1+0)",
        "(=> (not (= 2 (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) 0) 2) (Read_Int_Int a1+0 2)))",
        "(=> (not (= CC (- (* 3 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) 0) CC) (Read_Int_Int a2+0 CC)))",
        "(=> (not (= CC (- (* 3 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) CC) (Read_Int_Int a2+0 CC)))",
        "(=> (not (= CC (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) CC) (Read_Int_Int a1+0 CC)))",
        "(=> (not (= CC (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) 0) CC) (Read_Int_Int a+0 CC)))",
        "(=> (not (= CC (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) CC) (Read_Int_Int a+0 CC)))",
        "(=> (not (= Z (- (* 3 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) 0) Z) (Read_Int_Int a2+0 Z)))",
        "(=> (not (= Z (- (* 3 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) Z) (Read_Int_Int a2+0 Z)))",
        "(=> (not (= Z (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) 0) Z) (Read_Int_Int a1+0 Z)))",
        "(=> (not (= Z (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) Z) (Read_Int_Int a1+0 Z)))",
        "(=> (not (= Z (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= i+1 (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) i+1) (Read_Int_Int a1+0 i+1)))",
        "(=> (not (= i+1 (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) 0) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= i+1 (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= minval+1 (- (* 3 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) minval+1) (Read_Int_Int a2+0 minval+1)))",
        "(=> (not (= minval+1 (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) 0) minval+1) (Read_Int_Int a1+0 minval+1)))",
        "(=> (not (= minval+2 (- (* 3 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) minval+2) (Read_Int_Int a1+0 minval+2)))",
        "(=> (not (= minval+2 (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) 0) minval+2) (Read_Int_Int a+0 minval+2)))",
        "(=> (not (= minval+2 (- (* 3 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) minval+2) (Read_Int_Int a+0 minval+2)))",
    ],
}
