tests/snapshots/snapshot_tests__array_tiling_pr4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_pr4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) (- (* 4 i+0) 4)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) (- (* 4 i+0) 4)) val4+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) (- (* 4 i+0) 3)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) (- (* 4 i+0) 3)) val3+0)",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) (- (* 4 i+0) 2)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) (- (* 4 i+0) 2)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) (- (* 4 i+0) 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) (- (* 4 i+0) 1)) val1+0)",
        "(=> (not (= (* 4 CC) (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) (* 4 CC)) (Read_Int_Int a1+0 (* 4 CC))))",
        "(=> (not (= (* 4 CC) (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) (* 4 CC)) (Read_Int_Int a+0 (* 4 CC))))",
        "(=> (not (= (* 4 i+0) (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) (* 4 i+0)) (Read_Int_Int a1+0 (* 4 i+0))))",
        "(=> (not (= (* 4 i+0) (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) (* 4 i+0)) (Read_Int_Int a+0 (* 4 i+0))))",
        "(=> (not (= (* 4 i+0) (- (* 4 i+1) 3))) (= (Read_Int_Int (Write_Int_Int a1+1 (- (* 4 i+1) 3) 0) (* 4 i+0)) (Read_Int_Int a1+1 (* 4 i+0))))",
        "(=> (not (= (* 4 i+1) (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) (* 4 i+1)) (Read_Int_Int a2+0 (* 4 i+1))))",
        "(=> (not (= (* 4 i+1) (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) (* 4 i+1)) (Read_Int_Int a1+0 (* 4 i+1))))",
        "(=> (not (= (* 4 i+1) (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) (* 4 i+1)) (Read_Int_Int a1+0 (* 4 i+1))))",
        "(=> (not (= (* 4 i+1) (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) (* 4 i+1)) (Read_Int_Int a+0 (* 4 i+1))))",
        "(=> (not (= 1 (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) 1) (Read_Int_Int a2+0 1)))",
        "(=> (not (= 1 (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) 1) (Read_Int_Int a1+0 1)))",
        "(=> (not (= 2 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= 4 (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) 4) (Read_Int_Int a3+0 4)))",
        "(=> (not (= 4 (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) 4) (Read_Int_Int a3+0 4)))",
        "(=> (not (= 4 (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) 4) (Read_Int_Int a2+0 4)))",
        "(=> (not (= 4 (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) 4) (Read_Int_Int a2+0 4)))",
        "(=> (not (= 4 (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) 4) (Read_Int_Int a1+0 4)))",
        "(=> (not (= 4 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) 4) (Read_Int_Int a+0 4)))",
        "(=> (not (= 7 (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) 7) (Read_Int_Int a3+0 7)))",
        "(=> (not (= 7 (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) 7) (Read_Int_Int a2+0 7)))",
        "(=> (not (= 7 (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) 7) (Read_Int_Int a1+0 7)))",
        "(=> (not (= 7 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) 7) (Read_Int_Int a+0 7)))",
        "(=> (not (= CC (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) CC) (Read_Int_Int a3+0 CC)))",
        "(=> (not (= CC (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) CC) (Read_Int_Int a3+0 CC)))",
        "(=> (not (= CC (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) CC) (Read_Int_Int a2+0 CC)))",
        "(=> (not (= CC (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) CC) (Read_Int_Int a1+0 CC)))",
        "(=> (not (= CC (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) CC) (Read_Int_Int a+0 CC)))",
        "(=> (not (= Z (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) Z) (Read_Int_Int a3+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) Z) (Read_Int_Int a3+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) Z) (Read_Int_Int a2+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) Z) (Read_Int_Int a2+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) Z) (Read_Int_Int a1+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) Z) (Read_Int_Int a1+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= i+1 (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) i+1) (Read_Int_Int a3+0 i+1)))",
        "(=> (not (= i+1 (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) i+1) (Read_Int_Int a1+0 i+1)))",
        "(=> (not (= i+1 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= minval+0 (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) minval+0) (Read_Int_Int a1+0 minval+0)))",
        "(=> (not (= minval+1 (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) minval+1) (Read_Int_Int a3+0 minval+1)))",
        "(=> (not (= minval+1 (- (* 4 i+0) 2))) (= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) minval+1) (Read_Int_Int a2+0 minval+1)))",
        "(=> (not (= minval+1 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) minval+1) (Read_Int_Int a+0 minval+1)))",
        "(=> (not (= minval+1 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) minval+1) (Read_Int_Int a+0 minval+1)))",
        "(=> (not (= val3+1 (- (* 4 i+0) 3))) (= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) val3+1) (Read_Int_Int a1+0 val3+1)))",
        "(=> (not (= val3+1 (- (* 4 i+0) 4))) (= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) val3+1) (Read_Int_Int a+0 val3+1)))",
        "(=> (not (= val3+2 (- (* 4 i+0) 1))) (= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) val3+2) (Read_Int_Int a3+0 val3+2)))",
    ],
}
